--- a/index.html
+++ b/index.html
@@ -4,11 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Boolean</title>
 </head>
 <body>
-    
+    <!-- HEADER -->
+    <header>
+        <!-- NAV -->
+        <nav class="flex width-80-auto">
+            <!-- LEFT NAV -->
+            <ul class="flex nav-left white">
+                <li class="margin-left">Donna</li>
+                <li class="margin-left">Uomo</li>
+                <li class="margin-left">Bambini</li>
+            </ul>
+            <!-- LOGO -->
+            <a href="#">
+                <img class="flex" src="./assets/img/boolean-logo.png" alt="logo">
+            </a>
+            <!-- ICONS RIGHT NAV -->
+            <div class="nav-right flex">
+                <a href="#"><i class="fa-solid fa-user white margin-left"></i></a>
+                <a href="#"><i class="fa-solid fa-heart white margin-left"></i></a>
+                <a href="#"><i class="fa-solid fa-bag-shopping white margin-left"></i></a>
+            </div>
+        </nav>
+    </header>
+    <!-- MAIN -->
+    <main>
+
+    </main>
+
 </body>
 </html>
