--- a/index.html
+++ b/index.html
@@ -34,7 +34,85 @@
     </header>
     <!-- MAIN -->
     <main>
-
+        <section class="flex width-80-auto">
+            <div class="flex container-main">
+                <!-- CONTAINER SHOP 1 -->
+                <div class="container-shop margin-left relative">
+                    <img class="relative" src="./assets/img/1.webp" alt="photo">
+                    <img class="photo-hover" src="./assets/img/1b.webp" alt="photo hover">
+                    <div class="heart absolute">&hearts;</div>
+                    <div id="etichette" class="absolute">
+                        <span class="etichetta-1 white font-size">-50%</span>
+                        <span class="etichetta-2 white font-size">Sostenibilità</span>
+                    </div>
+                    <div class="font-size">Levi's</div>
+                    <h4>RELAXED FIT TEE UNISEX</h4>
+                    <span class="price-1">14,99 &euro;</span>
+                    <span class="price-2">29,99 &euro;</span>
+                </div>
+                <!-- CONTAINER SHOP 2 -->
+                <div class="container-shop margin-left relative">
+                    <img class="relative" src="./assets/img/2.webp" alt="photo">
+                    <img class="photo-hover" src="./assets/img/2b.webp" alt="photo hover">
+                    <div class="heart absolute">&hearts;</div>
+                    <div id="etichette" class="absolute">
+                        <span class="etichetta-1 white font-size">-30%</span>
+                    </div>
+                    <div class="font-size">Guess</div>
+                    <h4>ROSES TEE</h4>
+                    <span class="price-1">20,99 &euro;</span>
+                    <span class="price-2">29,99 &euro;</span>
+                </div>
+                <!-- CONTAINER SHOP 3 -->
+                <div class="container-shop margin-left relative">
+                    <img class="relative" src="./assets/img/3.webp" alt="photo">
+                    <img class="photo-hover" src="./assets/img/3b.webp" alt="photo hover">
+                    <div class="heart absolute">&hearts;</div>
+                    <div id="etichette" class="absolute">
+                        <span class="etichetta-1 white font-size">-30%</span>
+                    </div>
+                    <div class="font-size">Come Zucchero Filato</div>
+                    <h4>VOGLIA DI COLORI PASTELLO</h4>
+                    <span class="price-1">129,99 &euro;</span>
+                    <span class="price-2">184,99 &euro;</span>
+                </div>
+                <!-- CONTAINER SHOP 4 -->
+                <div class="container-shop margin-left relative">
+                    <img class="relative" src="./assets/img/4.webp" alt="photo">
+                    <img class="photo-hover" src="./assets/img/4b.webp" alt="photo hover">
+                    <div class="heart absolute">&hearts;</div>
+                    <div id="etichette" class="absolute">
+                        <span class="etichetta-1 white font-size">-50%</span>
+                        <span class="etichetta-2 white font-size">Sostenibilità</span>
+                    </div>
+                    <div class="font-size">Levi's</div>
+                    <h4>TEE UNISEX</h4>
+                    <span class="price-1">14,99 &euro;</span>
+                    <span class="price-2">29,99 &euro;</span>
+                </div>
+                <!-- CONTAINER SHOP 5 -->
+                <div class="container-shop margin-left relative">
+                    <img class="relative" src="./assets/img/5.webp" alt="photo">
+                    <img class="photo-hover" src="./assets/img/5b.webp" alt="photo hover">
+                    <div class="heart absolute">&hearts;</div>
+                    <div class="font-size">Maya Deluxe</div>
+                    <h4>STRIPE BODICE</h4>
+                    <span class="price-1">99,99 &euro;</span>
+                </div>
+                <!-- CONTAINER SHOP 6 -->
+                <div class="container-shop margin-left relative">
+                    <img class="relative" src="./assets/img/6.webp" alt="photo">
+                    <img class="photo-hover" src="./assets/img/6b.webp" alt="photo hover">
+                    <div class="heart absolute">&hearts;</div>
+                    <div id="etichette" class="absolute">
+                        <span class="etichetta-2 white font-size">Sostenibilità</span>
+                    </div>
+                    <div class="font-size">Espirit</div>
+                    <h4>MAGLIONE - BLACK</h4>
+                    <span class="price-1">29,99 &euro;</span>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
